# rainfall_engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  OpenGL_Engine.sln  OpenGL_Engine.vcxproj  OpenGL_Engine.vcxproj.DotSettings  OpenGL_Engine.vcxproj.filters  README.md  imgui.ini
Source Files/: OpenGL_Engine.cpp
Source Files/Glad/: glad.c
Source Files/Organization/: Project.cpp  Project.h
Source Files/Rendering/: Engine.cpp  Engine.h  EngineArgs.h  Window.cpp  Window.h
Source Files/Rendering/Buffers/: IBindable.cpp  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source Files/Rendering/Buffers/Attributes/: VertexAttribute.cpp
Source Files/Rendering/Buffers/Screen/: Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  Renderbuffer.cpp  Renderbuffer.h
Source Files/Rendering/Buffers/Textures/: Cubemap.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Source Files/Rendering/Entities/: Entity.cpp  Entity.h  Mouse.cpp  Mouse.h
Source Files/Rendering/Entities/Components/: CameraComponent.cpp  CameraComponent.h  Component.h  LightComponent.cpp  LightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  (+4 more)
Source Files/Rendering/Gui/: EditorManager.cpp  EditorManager.h  IGui.h
Source Files/Rendering/Shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h
Source Files/Rendering/World/: Mesh.cpp  Mesh.h  ModelData.h  Scene.cpp  Scene.h
Source Files/Utils/: FileDialogs.cpp  StringHelper.h
editor/: CMakeLists.txt  imgui.ini
editor/lib/Imgui/: imgui_impl_glfw.cpp
editor/src/: Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  Main.cpp  editor.cpp
editor/src/editor/: Editor.cpp  Editor.h  EditorEngine.cpp  EditorEngine.h
editor/src/gui/: EditorManager.cpp  EditorManager.h
editor/src/gui/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
editor/src/gui/inspectors/: ElementInspector.cpp  ElementInspector.h
editor/src/gui/panels/: EntityInspectorPanel.cpp  EntityInspectorPanel.h  PerformancePanel.cpp  PerformancePanel.h  ProjectNewModal.cpp  ProjectNewModal.h  ProjectsModalPanel.cpp  ProjectsModalPanel.h  SceneGraphPanel.cpp  SceneGraphPanel.h  ViewportPanel.cpp  ViewportPanel.h
game/: CMakeLists.txt  example.rainp  examplegame.rainp
game/include/: other.h  test.h  utils.h
game/saved/: project.rainp
game/scenes/: Another.rain  Example.rain  MyScene.rain
game/src/: ExampleGame.cpp  ExampleGame.h  TestScript.cpp  TestScript.h  game.cpp
includes/glad/: glad.h
lib/: CMakeLists.txt
lib/engine/: CMakeLists.txt
lib/engine/include/engine/core/: Application.h  Engine.h  IBindable.h  ISerializable.h
lib/engine/include/engine/managers/: InputManager.h  Mesh.h  ResourceManager.h  SceneManager.h
lib/engine/include/engine/rendering/: Cubemap.h  GBuffer.h  Renderbuffer.h  Renderer.h  Texture.h  Window.h
lib/engine/include/engine/utils/: FileDialogs.h
lib/engine/include/engine/world/: Component.h  Entity.h  Project.h  Scene.h  TransformComponent.h
lib/engine/include/engine/world/components/: BehaviorComponent.h  CameraComponent.h  Component.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TextureComponent.h  TransformComponent.h
lib/engine/include/glm/gtx/: matrix_decompose.inl
lib/engine/lib/glad/: glad.c
lib/engine/src/: Application.cpp  render.cpp  render.h
lib/engine/src/Organization/: Project.cpp  Project.h
lib/engine/src/Rendering/: Engine.cpp  Engine.h  EngineArgs.h  Renderer.cpp  Window.cpp  Window.h
lib/engine/src/Rendering/Buffers/: IBindable.cpp  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
lib/engine/src/Rendering/Buffers/Attributes/: VertexAttribute.cpp  VertexAttribute.h
lib/engine/src/Rendering/Buffers/Screen/: Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  Renderbuffer.cpp  Renderbuffer.h
lib/engine/src/Rendering/Buffers/Textures/: Cubemap.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
lib/engine/src/Rendering/Entities/: Entity.cpp  Entity.h  Mouse.cpp  Mouse.h
lib/engine/src/Rendering/Entities/Components/: BehaviorComponent.cpp  CameraComponent.cpp  CameraComponent.h  Component.h  LightComponent.cpp  LightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp
lib/engine/src/Rendering/Gui/: EditorManager.cpp  EditorManager.h  IGui.h
lib/engine/src/Rendering/Shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h
lib/engine/src/Rendering/Shaders/GLSL/Geometry/: geometry.vert
lib/engine/src/Rendering/Shaders/GLSL/Lighting/: pbr_lighting.frag
lib/engine/src/Rendering/Shaders/GLSL/Screen/: screen.frag
lib/engine/src/Rendering/Shaders/GLSL/ShadowDepth/: shadow_depth.vert
lib/engine/src/Rendering/Shaders/GLSL/Skybox/: skybox.frag
lib/engine/src/Rendering/Shaders/Programs/: GeometryProgram.cpp  GeometryProgram.h  LightingProgram.cpp  LightingProgram.h  PostProcessProgram.cpp  PostProcessProgram.h  ShadowDepthProgram.cpp  SkyboxProgram.cpp  SkyboxProgram.h
lib/engine/src/Rendering/Shaders/Shadows/: ShadowMap.cpp  ShadowMap.h
lib/engine/src/Rendering/World/: InputManager.cpp  Mesh.cpp  Project.cpp  ResourceManager.cpp  Scene.cpp  Scene.h  SceneManager.cpp
lib/engine/src/Rendering/World/Loading/: ISerializable.cpp  ISerializable.h
lib/engine/src/Utils/: FileDialogs.cpp  FileDialogs.h  MathHelper.cpp  MathHelper.h  StringHelper.cpp
saved/: Another.rain  Example.rain  project.rainp
(+22 files in other folders)
